# ai-vid-editor

./: CHANGELOG.md  Cargo.toml  README.md  ai-vid-editor.example.toml  flake.nix  install.sh  justfile  note.md  shell.nix  test_output.fcpxml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/: ai-vid-editor.desktop
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/batch_processor_20260222/: metadata.json  plan.md  spec.md
conductor/tracks/batch_processor_20260222/: index.md  plan.md
conductor/tracks/silence_trimmer_20260221/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/whisper_smart_edit_20260222/: index.md  metadata.json  plan.md  spec.md
docs/: customer-facing.md  linux-release-guide.md
plan/: events.jsonl  state.json
plans/: project-specs.md
presets/: minimal.toml  podcast.toml  shorts.toml  youtube.toml
release/: ai-vid-editor-0.1.424.sha256  ai-vid-editor-0.1.467.sha256
release/0.1.424/docs/: release-locations.md
scripts/: release.sh
src/: analyzer.rs  batch_processor.rs  config.rs  editor.rs  exporter.rs  gui.rs  gui_main.rs  gui_style.css  lib.rs  main.rs  ml.rs  stt_analyzer.rs  utils.rs
src/gui/: theme.rs
tests/: ml_integration.rs  pipeline_integration.rs
tests/common/: mod.rs
