[package]
name = "ai-vid-editor"
version = "0.1.33"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
clap = { version = "4.5.60", features = ["derive"] }
directories = "5.0"
hf-hub = "0.5.0"
rand = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokenizers = "0.22.2"
toml = "0.8"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.25.0"
