[package]
name = "ai-vid-editor"
version = "0.1.403"
edition = "2024"
authors = ["DraconDev"]
description = "AI-powered video editor for content creators"
license = "MIT"
repository = "https://github.com/DraconDev/ai-vid-editor"
keywords = ["video", "editor", "ai", "ffmpeg", "automation"]
categories = ["command-line-utilities", "multimedia::video"]

[dependencies]
anyhow = "1.0.102"
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
clap = { version = "4.5.60", features = ["derive"], optional = true }
directories = "5.0"
hf-hub = "0.5.0"
image = "0.25"
indicatif = "0.17"
libc = "0.2"
rand = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokenizers = "0.22.2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tract-onnx = "0.21"
walkdir = "2.5.0"

# GUI dependencies (optional) - using egui with wgpu backend for better compatibility
eframe = { version = "0.31", optional = true, default-features = false, features = ["wgpu", "accesskit", "wayland", "x11"] }
egui = { version = "0.31", optional = true }
rfd = { version = "0.15", optional = true }
chrono = { version = "0.4", optional = true }
notify-rust = { version = "4", optional = true }

[features]
default = ["cli", "gui"]
cli = ["clap", "notify-rust"]
gui = ["eframe", "egui", "rfd", "chrono", "notify-rust"]

[dev-dependencies]
tempfile = "3.25.0"

[[bin]]
name = "ai-vid-editor"
path = "src/main.rs"

[profile.release]
lto = "thin"
strip = true
opt-level = "s"
codegen-units = 1

[profile.dev]
opt-level = 1
